src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    color-scheme: light dark;
  }

  html, body {
    @apply antialiased;
  }

  body {
    @apply bg-white text-gray-900;
    margin: 0;
    min-height: 100vh;
  }

  #app {
    @apply min-h-screen;
  }
}

